# sparse_qcqps

./: .gitmodules  README.md  sparse_pca.ipynb  sparse_regression.ipynb
.ipynb_checkpoints/: sparse_regression-checkpoint.ipynb
lpm_methods/: .gitignore  CMakeLists.txt  pyproject.toml  regression.py  setup.py
lpm_methods/src/: bindings.cpp  conditionals.cpp  conditionals.h  pca.cpp  pca.h  poly.cpp  poly.h  regression.cpp  regression.h  regression_binding.cpp
lpm_methods/src/lpm_methods/: __init__.py
lpm_methods_python/: __init__.py  char_poly.py  pca.py  regression.py
